--- a/src/main/resources/static/ejemplo4.html
+++ b/src/main/resources/static/ejemplo4.html
@@ -4,9 +4,10 @@
     <head>
         <title>TechShop</title>
         <meta charset=" UTF-8">
+        <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <a href="ejemplo4.html">Back</a>|
+        <a href="ejemplo3.html">Back</a>|
         <a href="index.html">Home</a>|
         <a href="ejemplo5.html">Next</a><hr>
         <div>
