--- a/src/main/resources/static/ejemplo2.html
+++ b/src/main/resources/static/ejemplo2.html
@@ -7,9 +7,10 @@
         <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <a href="ejemplo5.html">Back</a>|
-        <a href="index.html">Home</
-        <a href="ejemplo3.html">Next</a><hr>
+      <a href="ejemplo5.html">&triangleleft;</a>|
+      <a href="index.html">Home</a>|
+      <a href="ejemplo3.html">&triangleright;</a>
+      <hr>
         <div>
             <h1 style="text-align: center;background-color: black;color: white">Ejemplo 2</h1>
             <span>Esto no tiene cambios</span>
