--- a/src/main/resources/static/formulario.html
+++ b/src/main/resources/static/formulario.html
@@ -31,9 +31,14 @@
             <h2>Ejemplo de formularios</h2>
             <article>
               <h3>Un formulario</h3>
-              <form action= "ingresar">
-                Nombre:
-                
+              <form action="ingresar " method="post"> <!-- post oculta la informacion en la barra de busqueda -->
+                Nombre:<input type="text" required name="nombre" value="" size="30" /><br>
+                Contraseña:<input type="password" required name="clave" value="" size="10" /><br>
+                Edad:<input type="number" name="edad" value="" /><br>
+                Fecha Nacimiento: <input type="date" name="fecha" /><br>
+                Correo: <input type="email" required name="correo" /><br>
+                <br>
+                <input type="submit" value="Enviar" />
               </form>
             </article>
 
