--- a/src/main/resources/static/ejemplo5.html
+++ b/src/main/resources/static/ejemplo5.html
@@ -7,9 +7,9 @@
         <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <a href="ejemplo4.html">&triangleleft</a>|
+        <a href="ejemplo4.html">&triangleleft;</a>|
         <a href="index.html">Home</a>|
-        <a href="ejemplo2.html">&triangleright</a><hr>
+        <a href="ejemplo2.html">&triangleright;</a><hr>
         <div>
             <h1 style="text-align: center;background-color: black;color: white">Ejemplo 5</h1>
             
