--- a/src/main/resources/static/index_Sem02.html
+++ b/src/main/resources/static/index_Sem02.html
@@ -4,23 +4,19 @@
     <head>
         <title>TechShop</title>
         <meta charset="UTF-8"> 
-        <link href="css/menu.css" rel="stylesheet" type="text/css"/>
+        <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
         
     </head>
     <hader>
     <body>
         <!-- Esta etiqueta no es visual pero es para informar que es un encabezado -->
-        <header class="header">
-            <nav class="nav">
-                <a href="index.html" class="logo nav-link">TechShop</a>
-                <ul class="nav-menu">
-                    <li class="nav-menu-item"><a class="nav-link nav-menu" href="ejemplo5.html">&triangleleft;</a></li>
-                    <li class="nav-menu-item"><a class="nav-link nav-menu" href="ejemplo2.html">&triangleright;</a></li>
-                    <li class="nav-menu-item"><a class="nav-link nav-menu" href="audios.html">Audios</a></li>
-                    <li class="nav-menu-item"><a class="nav-link nav-menu" href="videos.html">Videos</a></li>
-                    <li class="nav-menu-item"><a class="nav-link nav-menu" href="formulario.html">Formularios</a></li>
-                    <li class="nav-menu-item"><a class="nav-link nav-menu" href="iframe.html">Iframe</a></li>          
-                </ul>
+        <header>
+            <nav>
+            <h2>TechShop</h2>
+            <nav><!-- Barra menu -no visual- solo info -->
+                <a href="ejemplo5.html">&triangleleft;</a>|
+                <a href="index.html">Home</a>|
+                <a href="ejemplo2.html">&triangleright;</a><hr>
             </nav>
          </header>
             
