--- a/Trabajo_1/src/main/resources/static/Cuatro.html
+++ b/Trabajo_1/src/main/resources/static/Cuatro.html
@@ -2,12 +2,14 @@
 <html>
     <head>
         <title style="color:white">Arcos</title>
+        <link rel="icon" href="https://i.pinimg.com/originals/bf/c6/8b/bfc68b8ac88ba34eac665bdbf1d56207.jpg" type="image/png">
         <meta charset="UTF-8">
         <link href="css/carrusel.css" rel="stylesheet" type="text/css"/>
         <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
         <link href="css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
+        
         <header class="header">
             <nav class="nav">
                 <figure>
