--- a/Trabajo_1/src/main/resources/static/Uno.html
+++ b/Trabajo_1/src/main/resources/static/Uno.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title style="color:white">One Piece - Personajes</title>
+        <link rel="icon" href="https://i.pinimg.com/originals/bf/c6/8b/bfc68b8ac88ba34eac665bdbf1d56207.jpg" type="image/png">
         <meta charset="UTF-8">
         <link href="css/carrusel.css" rel="stylesheet" type="text/css"/>
         <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
