--- a/Trabajo_1/src/main/resources/static/index.html
+++ b/Trabajo_1/src/main/resources/static/index.html
@@ -14,6 +14,11 @@
 
 
     <body>
+        
+        <figure>
+                    <img src="https://i.pinimg.com/originals/bf/c6/8b/bfc68b8ac88ba34eac665bdbf1d56207.jpg" 
+                         alt="50" width="80" class="logo-img"/>
+                </figure>
 
         <header class="header">
             <nav class="nav">
